--- a/API/API/packages.config
+++ b/API/API/packages.config
@@ -4,6 +4,8 @@
   <package id="Autofac" version="3.5.2" targetFramework="net45" />
   <package id="Common.Logging" version="2.2.0" targetFramework="net45" />
   <package id="Common.Logging.Core" version="2.2.0" targetFramework="net45" />
+  <package id="elmah.corelibrary" version="1.2.1" targetFramework="net45" />
+  <package id="Elmah.MVC" version="2.1.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="Facebook" version="6.8.0" targetFramework="net45" />
   <package id="Google.Apis" version="1.9.0" targetFramework="net45" />
