--- a/Web/app/index.html.dist
+++ b/Web/app/index.html.dist
@@ -56,10 +56,24 @@
     <script src="js/ripples.min.js"></script>
     <script src="js/material.min.js"></script>
     <script src="js/underscore-min.js"></script>
+    <script src="js/scrollglue.js"></script>
+    <script src="js/moment.min.js"></script>
+    <script src="js/angular-moment.min.js"></script>
+
+    <!-- Load WebSocket libraries and config -->
+    <script src="http://localhost:1337/js/dependencies/sails.io.js"></script>
+    <script type="text/javascript">io.sails.url ='http://localhost:1337';</script>
 
     <!-- Load yieldto.me App -->
     <script src="js/yieldtome.min.js"></script>
     
+    <!-- Initialize meterial design animations -->
+    <script>
+        $(document).ready(function() {
+            $.material.init();
+        });
+    </script>
+
     <!-- Analytics tracking -->
     <script>
     (function(i, s, o, g, r, a, m) {
