--- a/Web/bower.json
+++ b/Web/bower.json
@@ -22,6 +22,11 @@
     "angular-animate": "1.3.x",
     "angular-cookies": "1.3.x",
     "satellizer": "~0.6.2",
-    "bootstrap-material-design": "~0.1.5"
+    "bootstrap-material-design": "~0.1.5",
+    "underscore": "~1.7.0",
+    "angularjs-scroll-glue": "~0.0.1",
+    "angular-sanitize": "~1.3.8",
+    "angular-moment": "~0.8.3",
+    "moment": "~2.8.4"
   }
 }
