--- a/Web/app/index.html.dist
+++ b/Web/app/index.html.dist
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>yieldto.me - helps delegates and the chair link up at Model UNs</title>
     <meta name="description" content="yieldto.me helps delegates and the chair link up at Model UNs. Delegates can use their phone, tablet or PC to- Send each other messages, Exchange secret 'Likes', Safely share contact details, Add themselves to Speakers lists and Vote on polls and motions">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -62,7 +62,8 @@
     <script src="js/angular-moment.min.js"></script>
 
     <!-- Load WebSocket libraries and config -->
-    <script src="http://localhost:1337/js/dependencies/sails.io.js"></script>
+    <script src="js/socket.io.js"></script>
+    <script src="js/sails.io.js"></script>
     <script type="text/javascript">io.sails.url ='http://localhost:1337';</script>
 
     <!-- Load yieldto.me App -->
