--- a/Web/bower.json
+++ b/Web/bower.json
@@ -24,9 +24,10 @@
     "satellizer": "~0.6.2",
     "bootstrap-material-design": "~0.1.5",
     "underscore": "~1.7.0",
-    "angularjs-scroll-glue": "~0.0.1",
     "angular-sanitize": "~1.3.8",
     "angular-moment": "~0.8.3",
-    "moment": "~2.8.4"
+    "moment": "~2.8.4",
+    "socket.io-client": "~1.2.1",
+    "sails.io.js": "~0.11.4"
   }
 }
