--- a/Web/package.json
+++ b/Web/package.json
@@ -6,19 +6,20 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "karma": "~0.10",
-    "protractor": "~0.17.0",
-    "http-server": "^0.6.1",
-    "bower": "^1.3.1",
-    "shelljs": "^0.2.6",
-    "karma-ng-html2js-preprocessor": "^0.1.0",
-    "grunt-contrib-uglify": "^0.5.0",
-    "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-qunit": "^0.5.2",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-text-replace": "^0.3.12"
+    "karma": "^0.12.x",
+    "protractor": "^1.6.x",
+    "http-server": "^0.7.x",
+    "bower": "^1.3.x",
+    "shelljs": "^0.2.x",
+    "karma-ng-html2js-preprocessor": "^0.1.x",
+    "grunt-contrib-uglify": "^0.5.x",
+    "grunt-contrib-concat": "^0.4.x",
+    "grunt-contrib-jshint": "^0.10.x",
+    "grunt-contrib-watch": "^0.6.x",
+    "grunt-contrib-qunit": "^0.5.x",
+    "grunt-contrib-copy": "^0.5.x",
+    "grunt-text-replace": "^0.3.x",
+    "protractor-screenshot-reporter": "0.0.5"
   },
   "scripts": {
     "postinstall": "bower install",
@@ -26,6 +27,7 @@
     "test": "karma start test/karma.conf.js",
     "update-webdriver": "webdriver-manager update",
     "protractor": "protractor test/protractor-conf.js",
+    "protractor-debug": "protractor debug test/protractor-conf.js",
     "test-single-run": "karma start test/karma.conf.js  --single-run",
     "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
   }
